@startuml
title State Machine Diagram - Vòng Đời Trạng Thái Của Trang Truyện (Page)

skinparam backgroundColor white
skinparam shadowing false
skinparam linetype ortho

[*] --> drafting : Mangaka tải lên trang vẽ mới

state drafting {
    description : Trang vẽ thô đang biên tập
}

state drawing {
    description : Đang thực hiện vẽ (đang có Task hoạt động)
}

state approved {
    description : Toàn bộ phân vùng (PageRegions) đã hoàn thành và được duyệt
}

state published {
    description : Trang truyện đã xuất bản chính thức cùng Chapter
}

drafting --> drawing : Mangaka tạo và giao Task trên phân vùng
drafting --> reviewing_draft : Chapter chứa trang chuyển sang reviewing_draft
reviewing_draft --> drafting : Chapter bị từ chối duyệt nháp
reviewing_draft --> drawing : Chapter được duyệt nháp
drawing --> reviewing_final : Chapter chứa trang chuyển sang reviewing_final
reviewing_final --> drawing : Chapter bị từ chối duyệt hoàn chỉnh

state waiting_genko <<choice>> {
    description : Tất cả Task hoàn thành nhưng chưa có bản vẽ hoàn chỉnh (Genko)\n[Badge vàng: "Chờ nộp bản hoàn chỉnh"]
}

drawing --> waiting_genko : Tất cả phân vùng (PageRegions) chuyển sang 'completed'\nvà tất cả Task đã hoàn thành\n[Guard: old_image_url == 'no_genko']
waiting_genko --> approved : Tác giả tải lên bản vẽ hoàn chỉnh (Genko)\n[PageController::update()]\n[Guard: old_image_url != 'no_genko']
reviewing_final --> approved : Chapter được duyệt hoàn chỉnh

approved --> published : Chapter chứa trang này được duyệt xuất bản

published --> [*]

@enduml
